# esssans

./: .buildinfo  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  genindex.html  index.html  objects.inv  output.txt  py-modindex.html  pyproject.toml  pyproject.toml.rej  search.html  searchindex.js  tox.ini
.github/workflows/: ci.yml
_modules/: index.html
_modules/ess/isissans/: components.html  data.html  general.html  io.html  mantidio.html  sans2d.html  visualization.html  zoom.html
_modules/ess/loki/: data.html  general.html  io.html  larmor_workflow.html  live.html  workflow.html
_modules/ess/sans/: beam_center_finder.html  common.html  conversions.html  data.html  i_of_q.html  io.html  logging.html  normalization.html  types.html  uncertainty.html  workflow.html
_modules/scipp/core/: data_group.html
_static/: documentation_options.js
about/: index.html
api-reference/: index.html
developer/: coding-conventions.html  dependency-management.html  getting-started.html  index.html
docs/: conf.py  index.md
docs/_static/: custom.css
docs/api-reference/: index.md
docs/examples/: index.md  loki-direct-beam.ipynb  sans2d.ipynb  zoom.ipynb
docs/skadi/: index.md
docs/user-guide/common/: beam-center-finder.ipynb
docs/user-guide/isis/: sans2d.ipynb  zoom.ipynb
docs/user-guide/loki/: loki-direct-beam.ipynb  loki-iofq.ipynb  streaming.ipynb  workflow-widget-loki.ipynb
examples/: index.html  loki-direct-beam.html  sans2d.html  zoom.html
requirements/: base.in  base.txt  basetest.txt  docs.txt  make_base.py  make_base.sh  mypy.txt  nightly.in  nightly.txt  test.txt
src/ess/isissans/: components.py  data.py  io.py  (+4 more)
src/esssans/: __init__.py  beam_center_finder.py  common.py  conversions.py  direct_beam.py  directbeam.py  i_of_q.py  larmor.py  loki.py  normalization.py  params.py  sans2d.py  types.py  uncertainty.py
tests/: i_of_q_test.py  io_test.py  normalization_test.py  sans2d_reduction_test.py  uncertainty_test.py
tests/isis/: sans2d_reduction_test.py
tests/isissans/: sans2d_reduction_test.py  zoom_reduction_test.py
tests/loki/: common.py  directbeam_test.py  iofq_test.py  workflow_test.py
tools/: shrink_nexus_loki.py
user-guide/: index.html  installation.html
user-guide/common/: beam-center-finder.html  index.html
user-guide/isis/: index.html  sans2d.html  zoom.html
user-guide/loki/: index.html  loki-direct-beam.html  loki-iofq.html  loki-make-tof-lookup-table.html  loki-make-wavelength-lookup-table.html  loki-reduction-ess.html  workflow-widget-loki.html
(+46 files in other folders)
