[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=68",
  "setuptools_scm[toml]>=8",
]

[project]
name = "esssans"
description = "SANS data reduction for the European Spallation Source"
authors = [{ name = "Scipp contributors" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
requires-python = ">=3.10"

# IMPORTANT:
# Run 'tox -e deps' after making changes here. This will update requirement files.
# Make sure to list one dependency per line.
dependencies = [
  "dask",
  "essreduce",
  "graphviz",
  "plopp",
  "pythreejs",
  "sciline>=24.4.1",
  "scipp>=23.8",
  "scippneutron>=23.9",
  "scippnexus>=23.12.1", # 23.12.0 and below deadlock in threaded use
]

dynamic = [
  "version",
]

[project.urls]
"Bug Tracker" = "https://github.com/scipp/esssans/issues"
"Documentation" = "https://scipp.github.io/esssans"
"Source" = "https://github.com/scipp/esssans"
[tool.setuptools_scm]

[tool.ruff.lint]
select = ["B", "C4", "DTZ", "E",  "F", "FA",
          "G", "I", "S", "T20", "PERF", "PGH",
          "PT", "PYI", "RUF", "UP", "W"]
ignore = [
    "E111", "E114", "E117", "D206", "D300",  # conflict with ruff format
    "UP006", "UP035", "UP007"] # FIXME: this breaks the tests
pydocstyle.convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I"]
# Assert in tests are fine
"tests/*" = ["S101"]
# Blocked by https://github.com/scipp/esssans/issues/95
"*.ipynb" = ["F403", "F405"]
"docs/*" = ["T201"]  # printing is ok for demonstration purposes

[tool.ruff.format]
quote-style = "preserve"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = """
--strict-config
--strict-markers
--import-mode=importlib
-ra
-v
"""
testpaths = "tests"
filterwarnings = [
  "error",
  'ignore:\n            Sentinel is not a public part of the traitlets API:DeprecationWarning',
]

[tool.mypy]
strict = true
ignore_missing_imports = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
show_error_codes = true
warn_unreachable = true

[project.entry-points."beamlime.stateless"]
ess-loki = "ess.loki.workflow:live_workflow"
